--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h3>Assignment #1: Paint Picture</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A01/01.html"> </a>
-    <li><a href="/StudentSamples/Year1/A01/02.html">Neon Sunset</a>
-    <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin Roszell</a>
-    <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Year1/A01/02.html">Elise H.</a>
+    <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin R.</a>
+    <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year1/A01/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A01/HM01.html"> </a>
     </ol>
@@ -60,8 +60,8 @@
     </ol>
     <h3>Assignment #6: Whiteboard</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A06/01.html">Aodhan Bevans</a>
-    <li><a href="/StudentSamples/Year1/A06/02.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A06/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/05.html"> </a>
@@ -69,8 +69,8 @@
     </ol>
     <h3>Assignment #7: Growing Circles</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan Bevans</a>
-    <li><a href="/StudentSamples/Year1/A07/02.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan B.</a>
+    <li><a href="/StudentSamples/Year1/A07/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A07/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
@@ -96,7 +96,7 @@
     </ol>
     <h3>Assignment #10: While Loops</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A10/01.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A10/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
@@ -105,7 +105,7 @@
     </ol>
     <h3>Assignment #11: Arrays</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A11/01.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A11/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A11/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/04.html"> </a>
@@ -141,7 +141,7 @@
     </ol>
     <h3>Assignment #15: The Cell</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A15/01.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A15/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A15/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
@@ -151,7 +151,7 @@
     <h3>Assignment #16: Image Filters</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A16/01.html"> </a>
-    <li><a href="/StudentSamples/Year1/A16/02.html">Mushroom</a>
+    <li><a href="/StudentSamples/Year1/A16/02.html">Elise H.</a>
     <li><a href="/StudentSamples/Year1/A16/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A16/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A16/05.html"> </a>
@@ -195,7 +195,7 @@
     </ol>
     <h3>Assignment #21: Blockade Game</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A21/01.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year1/A21/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A21/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/04.html"> </a>
@@ -218,7 +218,7 @@
     </ol>
     <h3>Assignment #2:Quantum Foam</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A02/01.html">Noah Harker</a>
+    <li><a href="/StudentSamples/Year2/A02/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A02/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/04.html"> </a>
@@ -227,7 +227,7 @@
     </ol>
     <h3>Assignment #3: Noisey Fireflies</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A03/01.html">Noah Harker</a>
+    <li><a href="/StudentSamples/Year2/A03/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A03/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
@@ -254,7 +254,7 @@
     </ol>
     <h3>Assignment #6: Generated Forest</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A06/01.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Year2/A06/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year2/A06/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A06/04.html"> </a>
@@ -272,8 +272,8 @@
     </ol>
     <h3>Assignment #8: Paint Splatter</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A08/01.html">Nathan Olsen</a>
-    <li><a href="/StudentSamples/Year2/A08/02.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year2/A08/01.html">Nathan O.</a>
+    <li><a href="/StudentSamples/Year2/A08/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year2/A08/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
@@ -281,7 +281,7 @@
     </ol>
     <h3>Assignment #9: Rocket</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A09/01.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Year2/A09/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year2/A09/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/04.html"> </a>
@@ -317,8 +317,8 @@
     </ol>
     <h3>Assignment #13: Classes</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A13/01.html">Noah Harker</a>
-    <li><a href="/StudentSamples/Year2/A13/02.html">Kieran Olsen</a>
+    <li><a href="/StudentSamples/Year2/A13/01.html">Noah H.</a>
+    <li><a href="/StudentSamples/Year2/A13/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year2/A13/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
@@ -335,7 +335,7 @@
     </ol>
     <h3>Assignment #15: Pixel Art</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A15/01.html">Noah Harker</a>
+    <li><a href="/StudentSamples/Year2/A15/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A15/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/04.html"> </a>
@@ -353,7 +353,7 @@
     </ol>
     <h3>Game 1: Dino Game</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A17/01.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Year2/A17/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year2/A17/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/04.html"> </a>
@@ -383,7 +383,7 @@
 
     <h2>Extra Projects</h2>
     <ol>
-    <li><a href="/StudentSamples/Extra/01.html">Aodhan Bevans</a>
+    <li><a href="/StudentSamples/Extra/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Extra/02.html"> </a>
     <li><a href="/StudentSamples/Extra/03.html"> </a>
     <li><a href="/StudentSamples/Extra/04.html"> </a>
