--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <h3>Game 1: Dino Game</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A17/01.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Year2/A17/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A17/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year2/A17/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A17/05.html"> </a>
