--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </ol>
     <h3>Assignment #5: Bouncing Ball</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A05/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year1/A05/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/04.html"> </a>
@@ -78,25 +78,25 @@
     </ol>
     <h3>Assignment #8: Simple Game</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A08/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year1/A08/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/HM01.html"> </a>
     </ol>
-    <h3>Assignment #9: For Loops</h3>
+    <h3>Assignment #9: While Loops</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A09/01.html"> </a>
-    <li><a href="/StudentSamples/Year1/A09/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/01.html">Kieran O. </a>
+    <li><a href="/StudentSamples/Year1/A09/02.html">Kale J. </a>
     <li><a href="/StudentSamples/Year1/A09/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
     </ol>
-    <h3>Assignment #10: While Loops</h3>
+    <h3>Assignment #10: For Loops</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A10/01.html">Kieran O.</a>
+    <li><a href="/StudentSamples/Year1/A10/01.html"></a>
     <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
@@ -236,7 +236,7 @@
     </ol>
     <h3>Assignment #4: Laser Engraver</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A04/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year2/A04/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/04.html"> </a>
