--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a href="/StudentSamples/Year1/A01/02.html">Elise H.</a>
     <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Year1/A01/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/05.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A01/HM01.html"> </a>
     </ol>
     <h3>Assignment #2: Width and Height</h3>
@@ -89,7 +89,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A09/01.html">Kieran O. </a>
     <li><a href="/StudentSamples/Year1/A09/02.html">Kale J. </a>
-    <li><a href="/StudentSamples/Year1/A09/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/03.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A09/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
@@ -106,7 +106,7 @@
     <h3>Assignment #11: Arrays</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A11/01.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year1/A11/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/02.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A11/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A11/05.html"> </a>
@@ -168,7 +168,7 @@
     </ol>
     <h3>Assignment #18: Pixel Manipulation</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A18/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/01.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A18/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/04.html"> </a>
@@ -219,7 +219,7 @@
     <h3>Assignment #2:Quantum Foam</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A02/01.html">Noah H.</a>
-    <li><a href="/StudentSamples/Year2/A02/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A02/02.html">Austin F.</a>
     <li><a href="/StudentSamples/Year2/A02/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A02/05.html"> </a>
@@ -237,7 +237,7 @@
     <h3>Assignment #4: Laser Engraver</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A04/01.html">Kale J.</a>
-    <li><a href="/StudentSamples/Year2/A04/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/02.html">Austin F.</a>
     <li><a href="/StudentSamples/Year2/A04/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/05.html"> </a>
@@ -362,7 +362,7 @@
     </ol>
     <h3>Game 2: Snake</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A18/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/01.html">Austin F.</a>
     <li><a href="/StudentSamples/Year2/A18/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/04.html"> </a>
