--- a/Year2/A09/02.html
+++ b/Year2/A09/02.html
@@ -11,5 +11,6 @@
     <main>
     </main>
     <script src="02.js"></script>
+    <p>Use left and right arrows to speed up and slow down</p>
   </body>
 </html>
