--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year1/A01/05.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year1/A01/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/HM01.html">Asher B.</a>
     </ol>
     <h3>Assignment #2: Width and Height</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A02/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A02/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A02/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A02/04.html"> </a>
@@ -42,7 +42,7 @@
     </ol>
     <h3>Assignment #4: Conditionals</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A04/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A04/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/04.html"> </a>
@@ -52,7 +52,7 @@
     <h3>Assignment #5: Bouncing Ball</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A05/01.html">Kale J.</a>
-    <li><a href="/StudentSamples/Year1/A05/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A05/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/05.html"> </a>
@@ -60,7 +60,7 @@
     </ol>
     <h3>Assignment #6: Whiteboard</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A06/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A06/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A06/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/04.html"> </a>
@@ -71,7 +71,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year1/A07/02.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year1/A07/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/HM01.html"> </a>
@@ -96,7 +96,7 @@
     </ol>
     <h3>Assignment #10: For Loops</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A10/01.html"></a>
+    <li><a href="/StudentSamples/Year1/A10/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
@@ -114,7 +114,7 @@
     </ol>
     <h3>Assignment #12: Snow</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A12/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A12/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A12/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A12/04.html"> </a>
@@ -132,7 +132,7 @@
     </ol>
     <h3>Assignment #14: Animated Triangles</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A14/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A14/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/04.html"> </a>
@@ -142,7 +142,7 @@
     <h3>Assignment #15: The Cell</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A15/01.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year1/A15/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/05.html"> </a>
@@ -169,7 +169,7 @@
     <h3>Assignment #18: Pixel Manipulation</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A18/01.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year1/A18/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A18/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/05.html"> </a>
@@ -228,7 +228,7 @@
     <h3>Assignment #3: Noisey Fireflies</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A03/01.html">Noah H.</a>
-    <li><a href="/StudentSamples/Year2/A03/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A03/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A03/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A03/05.html"> </a>
@@ -238,7 +238,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A04/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year2/A04/02.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year2/A04/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A04/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A04/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A04/HM01.html"> </a>
@@ -274,7 +274,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A08/01.html">Nathan O.</a>
     <li><a href="/StudentSamples/Year2/A08/02.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year2/A08/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A08/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A08/HM01.html"> </a>
@@ -282,7 +282,7 @@
     <h3>Assignment #9: Rocket</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A09/01.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Year2/A09/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A09/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A09/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A09/05.html"> </a>
@@ -319,7 +319,7 @@
     <ol>
     <li><a href="/StudentSamples/Year2/A13/01.html">Noah H.</a>
     <li><a href="/StudentSamples/Year2/A13/02.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year2/A13/03.html"> </a>
+    <li><a href="/StudentSamples/Year2/A13/03.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A13/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A13/HM01.html"> </a>
@@ -336,7 +336,7 @@
     <h3>Assignment #15: Pixel Art</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A15/01.html">Noah H.</a>
-    <li><a href="/StudentSamples/Year2/A15/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A15/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A15/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/05.html"> </a>
@@ -363,7 +363,7 @@
     <h3>Game 2: Snake</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A18/01.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year2/A18/02.html"> </a>
+    <li><a href="/StudentSamples/Year2/A18/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year2/A18/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/04.html"> </a>
     <li><a href="/StudentSamples/Year2/A18/05.html"> </a>
