--- a/Year2/A04/03.html
+++ b/Year2/A04/03.html
@@ -10,6 +10,7 @@
   <body>
     <main>
     </main>
+    <p>Use Up/Down Arrows to turn on and off</p>
     <script src="03.js"></script>
   </body>
 </html>
