--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Year 1</h2>
     <h3>Assignment #1: Paint Picture</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A01/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A01/01.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A01/02.html">Elise H.</a>
     <li><a href="/StudentSamples/Year1/A01/03.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A01/04.html">Aodhan B.</a>
@@ -33,7 +33,7 @@
     </ol>
     <h3>Assignment #3: Variables</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A03/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/01.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A03/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A03/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A03/04.html"> </a>
@@ -43,7 +43,7 @@
     <h3>Assignment #4: Conditionals</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A04/01.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A04/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A04/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/05.html"> </a>
@@ -90,14 +90,14 @@
     <li><a href="/StudentSamples/Year1/A09/01.html">Kieran O. </a>
     <li><a href="/StudentSamples/Year1/A09/02.html">Kale J. </a>
     <li><a href="/StudentSamples/Year1/A09/03.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year1/A09/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/04.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
     </ol>
     <h3>Assignment #10: For Loops</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A10/01.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A10/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/05.html"> </a>
@@ -133,7 +133,7 @@
     <h3>Assignment #14: Animated Triangles</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A14/01.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A14/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A14/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/05.html"> </a>
@@ -170,7 +170,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A18/01.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A18/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A18/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/03.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A18/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A18/HM01.html"> </a>
