--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <h3>Assignment #3: Variables</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A03/01.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A03/02.html"> </a>
-    <li><a href="/StudentSamples/Year1/A03/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/02.html">Jaxon L.</a>
+    <li><a href="/StudentSamples/Year1/A03/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A03/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A03/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A03/HM01.html"> </a>
@@ -44,7 +44,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A04/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A04/02.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A04/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A04/03.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A04/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A04/HM01.html"> </a>
@@ -53,7 +53,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A05/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year1/A05/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A05/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A05/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/HM01.html"> </a>
@@ -91,7 +91,7 @@
     <li><a href="/StudentSamples/Year1/A09/02.html">Kale J. </a>
     <li><a href="/StudentSamples/Year1/A09/03.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A09/04.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A09/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A09/05.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A09/HM01.html"> </a>
     </ol>
     <h3>Assignment #10: For Loops</h3>
@@ -107,16 +107,16 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A11/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A11/02.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year1/A11/03.html"> </a>
-    <li><a href="/StudentSamples/Year1/A11/04.html"> </a>
-    <li><a href="/StudentSamples/Year1/A11/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/03.html">Jensen S.</a>
+    <li><a href="/StudentSamples/Year1/A11/04.html">Ripkin R.</a>
+    <li><a href="/StudentSamples/Year1/A11/05.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A11/HM01.html"> </a>
     </ol>
     <h3>Assignment #12: Snow</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A12/01.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A12/02.html"> </a>
-    <li><a href="/StudentSamples/Year1/A12/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/02.html">Jaxen L.</a>
+    <li><a href="/StudentSamples/Year1/A12/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A12/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A12/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A12/HM01.html"> </a>
@@ -134,7 +134,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A14/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A14/02.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A14/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/03.html">Troy F.</a>
     <li><a href="/StudentSamples/Year1/A14/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/HM01.html"> </a>
@@ -143,14 +143,14 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A15/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A15/02.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A15/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/03.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/HM01.html"> </a>
     </ol>
     <h3>Assignment #16: Image Filters</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A16/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A16/01.html">Troy F.</a>
     <li><a href="/StudentSamples/Year1/A16/02.html">Elise H.</a>
     <li><a href="/StudentSamples/Year1/A16/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A16/04.html"> </a>
@@ -159,7 +159,7 @@
     </ol>
     <h3>Assignment #17: get()</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A17/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/01.html">Aaron P.</a>
     <li><a href="/StudentSamples/Year1/A17/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/04.html"> </a>
@@ -171,13 +171,13 @@
     <li><a href="/StudentSamples/Year1/A18/01.html">Austin F.</a>
     <li><a href="/StudentSamples/Year1/A18/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A18/03.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A18/04.html"> </a>
-    <li><a href="/StudentSamples/Year1/A18/05.html"> </a>
-    <li><a href="/StudentSamples/Year1/A18/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A18/04.html">Jensen S.</a>
+    <li><a href="/StudentSamples/Year1/A18/05.html">Ripkin R.</a>
+    <li><a href="/StudentSamples/Year1/A18/HM01.html">Jayden J.</a>
     </ol>
     <h3>Assignment #19: Audio Visulizer</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A19/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/01.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A19/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A19/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A19/04.html"> </a>
@@ -196,7 +196,7 @@
     <h3>Assignment #21: Blockade Game</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A21/01.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year1/A21/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/02.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A21/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/05.html"> </a>
