--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
     <h3>Assignment #19: Audio Visulizer</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A19/01.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A19/02.html"> </a>
-    <li><a href="/StudentSamples/Year1/A19/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/02.html">Jensen S.</a>
+    <li><a href="/StudentSamples/Year1/A19/03.html">Braiden Q.</a>
     <li><a href="/StudentSamples/Year1/A19/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A19/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A19/HM01.html"> </a>
