--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </ol>
     <h3>Assignment #20: Audio Pixelizer</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A20/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/01.html">Aaron P.</a>
     <li><a href="/StudentSamples/Year1/A20/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/04.html"> </a>
