--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <h2>Extra Projects</h2>
     <ol>
     <li><a href="/StudentSamples/Extra/01.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Extra/02.html"> </a>
+    <li><a href="/StudentSamples/Extra/02.html">Jayden J.</a>
     <li><a href="/StudentSamples/Extra/03.html"> </a>
     <li><a href="/StudentSamples/Extra/04.html"> </a>
     <li><a href="/StudentSamples/Extra/05.html"> </a>
