--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h3>Assignment #8: Simple Game</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A08/01.html">Kale J.</a>
-    <li><a href="/StudentSamples/Year1/A08/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/02.html">Anthony P.</a>
     <li><a href="/StudentSamples/Year1/A08/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/05.html"> </a>
@@ -135,7 +135,7 @@
     <li><a href="/StudentSamples/Year1/A14/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A14/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A14/03.html">Troy F.</a>
-    <li><a href="/StudentSamples/Year1/A14/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/04.html">Blaise W.</a>
     <li><a href="/StudentSamples/Year1/A14/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A14/HM01.html"> </a>
     </ol>
@@ -290,7 +290,7 @@
     </ol>
     <h3>Assignment #10: Create a City</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A10/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A10/01.html">Blaise W.</a>
     <li><a href="/StudentSamples/Year2/A10/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A10/04.html"> </a>
@@ -326,7 +326,7 @@
     </ol>
     <h3>Assignment #14: Splitting Bubbles</h3>
     <ol>
-    <li><a href="/StudentSamples/Year2/A14/01.html"> </a>
+    <li><a href="/StudentSamples/Year2/A14/01.html">Blaise W.</a>
     <li><a href="/StudentSamples/Year2/A14/02.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/03.html"> </a>
     <li><a href="/StudentSamples/Year2/A14/04.html"> </a>
