--- a/index.html
+++ b/index.html
@@ -390,5 +390,11 @@
     <li><a href="/StudentSamples/Extra/05.html"> </a>
     <li><a href="/StudentSamples/Extra/06.html"> </a>
     </ol>
+
+<!-------------------------------------------Year3---------------------------------->
+    <h2>Extra Projects</h2>
+    <ol>
+    <li><a href="/StudentSamples/Year3/Kieran/index.html">Kieran</a>
+    </ol>
   </body>
 </html>
