--- a/Year3/Kieran/mainFile.html
+++ b/Year3/Kieran/mainFile.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/quinton-ashley/p5play@3.14.13/planck.min.js; https://cdn.jsdelivr.net/gh/quinton-ashley/p5play@3.14.13/p5play.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+            
+    <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
