--- a/index.html
+++ b/index.html
@@ -379,7 +379,14 @@
     <li><a href="/StudentSamples/Year2/A19/HM01.html"> </a>
     </ol>
 
-<!-------------------------------------------EXTRA---------------------------------->
+
+    <!-------------------------------------------Year3---------------------------------->
+    <h2>Year 3</h2>
+    <ol>
+    <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
+    </ol>
+
+    <!-------------------------------------------EXTRA---------------------------------->
 
     <h2>Extra Projects</h2>
     <ol>
@@ -391,10 +398,18 @@
     <li><a href="/StudentSamples/Extra/06.html"> </a>
     </ol>
 
-<!-------------------------------------------Year3---------------------------------->
-    <h2>Extra Projects</h2>
+    <!-------------------------------------------My Projects---------------------------------->
+
+    <h2>My Projects</h2>
     <ol>
-    <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
+    <li><a href="/StudentSamples/myAssignments/01.html">Aodhan B.</a>
+    <li><a href="/StudentSamples/myAssignments/02.html">Jayden J.</a>
+    <li><a href="/StudentSamples/myAssignments/03.html"> </a>
+    <li><a href="/StudentSamples/myAssignments/04.html"> </a>
+    <li><a href="/StudentSamples/myAssignments/05.html"> </a>
+    <li><a href="/StudentSamples/myAssignments/06.html"> </a>
     </ol>
+
+
   </body>
 </html>
