--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
 
     <h2>My Projects</h2>
     <ol>
-    <li><a href="/StudentSamples/myAssignments/01.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/myAssignments/02.html">Jayden J.</a>
+    <li><a href="/StudentSamples/myAssignments/01.html">Year2 A16</a>
+    <li><a href="/StudentSamples/myAssignments/02.html"> </a>
     <li><a href="/StudentSamples/myAssignments/03.html"> </a>
     <li><a href="/StudentSamples/myAssignments/04.html"> </a>
     <li><a href="/StudentSamples/myAssignments/05.html"> </a>
