--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <h2>My Projects</h2>
     <ol>
     <li><a href="/StudentSamples/myAssignments/01.html">Year2 A16</a>
-    <li><a href="/StudentSamples/myAssignments/02.html"> </a>
+    <li><a href="/StudentSamples/myAssignments/02.html">Year3 A2 Umbrella</a>
     <li><a href="/StudentSamples/myAssignments/03.html"> </a>
     <li><a href="/StudentSamples/myAssignments/04.html"> </a>
     <li><a href="/StudentSamples/myAssignments/05.html"> </a>
