--- a/Year3/Austin/index.html
+++ b/Year3/Austin/index.html
@@ -31,15 +31,15 @@
 	-->
 
 	<!-- OFFLINE LINKS -->
-	<script src="node_modules/p5/lib/p5.js"></script>
-	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
+	<script src="Austin/node_modules/p5/lib/p5.js"></script>
+	<script src="Austin/node_modules/p5/lib/addons/p5.sound.min.js"></script>
 	<!-- <script src="node_modules/q5/q5.js"></script> -->
-	<script src="node_modules/p5play/planck.min.js"></script>
-	<script src="node_modules/p5play/p5play.js"></script>
+	<script src="Austin/node_modules/p5play/planck.min.js"></script>
+	<script src="Austin/node_modules/p5play/p5play.js"></script>
 
 
 	<!-- YOUR SKETCH -->
-	<script src="sketch.js"></script>
+	<script src="Austin/sketch.js"></script>
 </body>
 
 </html>
