--- a/Year3/Austin/index.html
+++ b/Year3/Austin/index.html
@@ -33,13 +33,13 @@
 
 	<!-- OFFLINE LINKS -->
 	
-	<script src="Austin/p5.js"></script>
-	<script src="Austin/p5.sound.min.js"></script>
+	<script src="p5.js"></script>
+	<script src="p5.sound.min.js"></script>
 	
 	<!-- <script src="node_modules/q5/q5.js"></script> -->
 
-	<script src="Austin/planck.min.js"></script>
-	<script src="Austin/p5play.js"></script>
+	<script src="planck.min.js"></script>
+	<script src="p5play.js"></script>
 
 	<!-- YOUR SKETCH -->
 	<script src="sketch.js"></script>
