--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
     <h2>Year 3</h2>
     <ol>
     <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
-    <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.-4</a>
+    <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
+    <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J.</a>
     </ol>
 
     <!-------------------------------------------EXTRA---------------------------------->
