--- a/Year3/Kale/index.html
+++ b/Year3/Kale/index.html
@@ -32,11 +32,11 @@
 	-->
 
 	<!-- OFFLINE LINKS -->
-	<script src="node_modules/p5/lib/p5.js"></script>
-	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
+	<script src="p5.js"></script>
+	<script src="p5.sound.min.js"></script>
 	<!-- <script src="node_modules/q5/q5.js"></script> -->
-	<script src="node_modules/p5play/planck.min.js"></script>
-	<script src="node_modules/p5play/p5play.js"></script>
+	<script src="planck.min.js"></script>
+	<script src="p5play.js"></script>
 
 
 	<!-- YOUR SKETCH -->
