--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
     <ol>
     <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
     <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
-    <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J. -2</a>
+    <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J.</a>
     </ol>
 
     <!-------------------------------------------EXTRA---------------------------------->
