--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
     <li><a href="/StudentSamples/Year3/Kieran/mainFile.html">Kieran</a>
     <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
     <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J.</a>
+    <li><a href="/StudentSamples/Year3/Aodhan/index.html">Aodhan B.</a>
+    
     </ol>
 
     <!-------------------------------------------EXTRA---------------------------------->
