--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     <li><a href="/StudentSamples/Year3/Austin/index.html">Austin F.</a>
     <li><a href="/StudentSamples/Year3/Kale/index.html">Kale J.</a>
     <li><a href="/StudentSamples/Year3/Aodhan/index.html">Aodhan B.</a>
-    <li><a href="/StudentSamples/Year3/Noah/index.html">Aodhan B.</a>
+    <li><a href="/StudentSamples/Year3/Noah/index.html">Noah H.</a>
     
     </ol>
 
