--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
 
     <!-------------------------------------------Year3---------------------------------->
     <h2>Tank Tournament</h2>
-    <h3>Winner of the First Annual Tank Tournament: Noah H.</h3>
-    <h3>Winner of the First Annual Tank Tournament: ???????</h3>
+    <h3>Winner of the First Semi-annual Tank Tournament: Noah H.</h3>
+    <h3>Winner of the Second Semi-annual Tank Tournament: ???????</h3>
 
     <!-------------------------------------------EXTRA---------------------------------->
 
