--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h3>Assignment #2: Width and Height</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A02/01.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A02/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A02/02.html">Noah L.</a>
     <li><a href="/StudentSamples/Year1/A02/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A02/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A02/05.html"> </a>
@@ -36,7 +36,7 @@
     <li><a href="/StudentSamples/Year1/A03/01.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A03/02.html">Jaxon L.</a>
     <li><a href="/StudentSamples/Year1/A03/03.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A03/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A03/04.html">Dora J.</a>
     <li><a href="/StudentSamples/Year1/A03/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A03/HM01.html"> </a>
     </ol>
@@ -54,7 +54,7 @@
     <li><a href="/StudentSamples/Year1/A05/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year1/A05/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A05/03.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A05/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A05/04.html">Rex D.</a>
     <li><a href="/StudentSamples/Year1/A05/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A05/HM01.html"> </a>
     </ol>
@@ -62,7 +62,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A06/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A06/02.html">Kieran O.</a>
-    <li><a href="/StudentSamples/Year1/A06/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A06/03.html">Emily J. </a>
     <li><a href="/StudentSamples/Year1/A06/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A06/HM01.html"> </a>
@@ -72,7 +72,7 @@
     <li><a href="/StudentSamples/Year1/A07/01.html">Aodhan B.</a>
     <li><a href="/StudentSamples/Year1/A07/02.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A07/03.html">Asher B.</a>
-    <li><a href="/StudentSamples/Year1/A07/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A07/04.html">Emily J.</a>
     <li><a href="/StudentSamples/Year1/A07/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A07/HM01.html"> </a>
     </ol>
@@ -80,7 +80,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A08/01.html">Kale J.</a>
     <li><a href="/StudentSamples/Year1/A08/02.html">Anthony P.</a>
-    <li><a href="/StudentSamples/Year1/A08/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A08/03.html">Nicolas C. </a>
     <li><a href="/StudentSamples/Year1/A08/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A08/HM01.html"> </a>
@@ -98,7 +98,7 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A10/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A10/02.html">Natalia B.</a>
-    <li><a href="/StudentSamples/Year1/A10/03.html"> </a>
+    <li><a href="/StudentSamples/Year1/A10/03.html">Ezra R.</a>
     <li><a href="/StudentSamples/Year1/A10/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A10/HM01.html"> </a>
@@ -110,20 +110,20 @@
     <li><a href="/StudentSamples/Year1/A11/03.html">Jensen S.</a>
     <li><a href="/StudentSamples/Year1/A11/04.html">Ripkin R.</a>
     <li><a href="/StudentSamples/Year1/A11/05.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A11/HM01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A11/HM01.html">John J.</a>
     </ol>
     <h3>Assignment #12: Snow</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A12/01.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A12/02.html">Jaxen L.</a>
     <li><a href="/StudentSamples/Year1/A12/03.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A12/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A12/04.html">Dora J.</a>
     <li><a href="/StudentSamples/Year1/A12/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A12/HM01.html"> </a>
     </ol>
     <h3>Assignment #13: Madlib Generator</h3>
     <ol>
-    <li><a href="/StudentSamples/Year1/A13/01.html"> </a>
+    <li><a href="/StudentSamples/Year1/A13/01.html">Emily J.</a>
     <li><a href="/StudentSamples/Year1/A13/02.html"> </a>
     <li><a href="/StudentSamples/Year1/A13/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A13/04.html"> </a>
@@ -136,7 +136,7 @@
     <li><a href="/StudentSamples/Year1/A14/02.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A14/03.html">Troy F.</a>
     <li><a href="/StudentSamples/Year1/A14/04.html">Blaise W.</a>
-    <li><a href="/StudentSamples/Year1/A14/05.html"> </a>
+    <li><a href="/StudentSamples/Year1/A14/05.html">Noah L.</a>
     <li><a href="/StudentSamples/Year1/A14/HM01.html"> </a>
     </ol>
     <h3>Assignment #15: The Cell</h3>
@@ -144,7 +144,7 @@
     <li><a href="/StudentSamples/Year1/A15/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A15/02.html">Asher B.</a>
     <li><a href="/StudentSamples/Year1/A15/03.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A15/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A15/04.html">Cyrus F.</a>
     <li><a href="/StudentSamples/Year1/A15/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A15/HM01.html"> </a>
     </ol>
@@ -160,7 +160,7 @@
     <h3>Assignment #17: get()</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A17/01.html">Aaron P.</a>
-    <li><a href="/StudentSamples/Year1/A17/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A17/02.html">Gerhardt G.</a>
     <li><a href="/StudentSamples/Year1/A17/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A17/05.html"> </a>
@@ -173,21 +173,21 @@
     <li><a href="/StudentSamples/Year1/A18/03.html">Natalia B.</a>
     <li><a href="/StudentSamples/Year1/A18/04.html">Jensen S.</a>
     <li><a href="/StudentSamples/Year1/A18/05.html">Ripkin R.</a>
-    <li><a href="/StudentSamples/Year1/A18/HM01.html">Jayden J.</a>
+    <li><a href="/StudentSamples/Year1/A18/HM01.html">Emily J.</a>
     </ol>
     <h3>Assignment #19: Audio Visulizer</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A19/01.html">Jayden J.</a>
     <li><a href="/StudentSamples/Year1/A19/02.html">Jensen S.</a>
     <li><a href="/StudentSamples/Year1/A19/03.html">Braiden Q.</a>
-    <li><a href="/StudentSamples/Year1/A19/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A19/04.html">Emily J.</a>
     <li><a href="/StudentSamples/Year1/A19/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A19/HM01.html"> </a>
     </ol>
     <h3>Assignment #20: Audio Pixelizer</h3>
     <ol>
     <li><a href="/StudentSamples/Year1/A20/01.html">Aaron P.</a>
-    <li><a href="/StudentSamples/Year1/A20/02.html"> </a>
+    <li><a href="/StudentSamples/Year1/A20/02.html">Gerhardt. G.</a>
     <li><a href="/StudentSamples/Year1/A20/03.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/04.html"> </a>
     <li><a href="/StudentSamples/Year1/A20/05.html"> </a>
@@ -197,8 +197,8 @@
     <ol>
     <li><a href="/StudentSamples/Year1/A21/01.html">Kieran O.</a>
     <li><a href="/StudentSamples/Year1/A21/02.html">Jayden J.</a>
-    <li><a href="/StudentSamples/Year1/A21/03.html"> </a>
-    <li><a href="/StudentSamples/Year1/A21/04.html"> </a>
+    <li><a href="/StudentSamples/Year1/A21/03.html">Cyrus F.</a>
+    <li><a href="/StudentSamples/Year1/A21/04.html">Dora J.</a>
     <li><a href="/StudentSamples/Year1/A21/05.html"> </a>
     <li><a href="/StudentSamples/Year1/A21/HM01.html"> </a>
     </ol>
@@ -342,7 +342,7 @@
     <li><a href="/StudentSamples/Year2/A15/05.html"> </a>
     <li><a href="/StudentSamples/Year2/A15/HM01.html"> </a>
     </ol>
-    <h3>Assignment #16: Falling Sand</h3>
+    <h3>Assignment #16: Tower Defense</h3>
     <ol>
     <li><a href="/StudentSamples/Year2/A16/01.html"> </a>
     <li><a href="/StudentSamples/Year2/A16/02.html"> </a>
